--- a/src/Components/Styles/RightNav.css
+++ b/src/Components/Styles/RightNav.css
@@ -1,13 +1,14 @@
-.sidenav-menu {
+.rightnav-menu {
     display: flex;
     flex-direction: column;
-    width: 15rem;
+    width: 18rem;
     height: 100%;
     background-color: var(--aside-bg-color);
     position: fixed;
     z-index: 1;
     top: 4.65rem;
-    left: 0;
+    right: 0;
+    left: auto;
 }
 
 .menu-item {
