feat: created suggestion bar

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
   --submit-btn-color: #1a73e8;
   --menu-item-hover-color: #555555;
   --scrollbar-hover-color: #f1f0f0e5;
+  --line-color: #ffffff46;
+  --username-color: #71767b;
 }
 
 body {
