--- a/src/Components/Styles/SideNav.css
+++ b/src/Components/Styles/SideNav.css
@@ -3,11 +3,11 @@
     flex-direction: column;
     width: 15rem;
     height: 100%;
-    background-color: var(--aside-bg-color);
     position: fixed;
     z-index: 1;
     top: 4.65rem;
     left: 0;
+    border-right: 1px solid var(--line-color);
 }
 
 .menu-item {
