--- a/src/Components/Styles/CreatePost.css
+++ b/src/Components/Styles/CreatePost.css
@@ -1,9 +1,47 @@
 .createpost-div {
-    border: 1px solid yellow;
     margin: 1rem 1rem 0rem 1rem;
     display: flex;
 }
 
-.createpost-heading {
-    padding: 0rem 1rem;
+.createpost-textarea {
+    width: 100%;
+    resize: none;
+    height: 7rem;
+    background-color: var(--primary-bg-color);
+    color: white;
+    font-size: 1rem;
+    outline: none;
+    border: 2px solid var(--line-color);
+    margin-top: 0px;
+}
+
+.createpost-textarea::placeholder {
+    color: var(--username-color);
+}
+
+.createpost-textarea:focus {
+    border-color: var(--tick-color);
+}
+
+.post-btn-div {
+    display: flex;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+    justify-content: flex-end;
+    border-bottom: 1px solid var(--line-color);
+}
+
+.post-btn {
+    padding: 0.5rem 1.5rem;
+    border-radius: 2.5rem;
+    font-weight: 450;
+    margin-right: 1rem;
+    background-color: rgb(29, 155, 240);
+    color: var(--white);
+    border: 1px solid transparent;
+    margin-left: auto;
+}
+
+.post-btn:hover {
+    background-color: rgba(29, 156, 240, 0.889);
 }
