--- a/src/Components/Styles/SideNav.css
+++ b/src/Components/Styles/SideNav.css
@@ -30,6 +30,13 @@
     background-color: var(--menu-item-hover-color);
 }
 
+@media only screen and (max-width: 900px) {
+
+    .sidenav-menu {
+        width: 12.5rem;
+    }
+}
+
 @media only screen and (max-width: 768px) {
 
     .sidenav-menu {
