--- a/src/Pages/Styles/Styles.css
+++ b/src/Pages/Styles/Styles.css
@@ -2,5 +2,25 @@
     overflow-y: auto;
     margin-left: 15rem;
     margin-right: 20rem;
-    border: 1px solid red;
+}
+
+.home-heading {
+    margin: 1rem;
+    margin-bottom: 2rem;
+}
+
+
+@media only screen and (max-width: 1100px) {
+
+    .main-content {
+        margin-right: 0px;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+
+    .main-content {
+        margin-left: 0px;
+    }
 }
