feat: created login page

--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -3,6 +3,7 @@
     top: 0px;
     border-bottom: 1px solid var(--line-color);
     background-color: var(--primary-bg-color);
+    align-items: center;
 }
 
 .header-logo {
@@ -10,14 +11,18 @@
 }
 
 .header-logo-img {
-    max-width: 4rem;
-    padding-right: 0.5rem;
+    max-width: 3.5rem;
 }
 
 .header-logo-img img {
     max-width: 100%;
     display: block;
     height: auto;
+}
+
+.logout-btn {
+    align-items: center;
+    height: 2.5rem;
 }
 
 @media only screen and (max-width: 600px) {
