--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -4,6 +4,7 @@
     border-bottom: 1px solid var(--line-color);
     background-color: var(--primary-bg-color);
     align-items: center;
+    z-index: 1;
 }
 
 .header-logo {
