--- a/src/Components/Styles/ProfileComponent.css
+++ b/src/Components/Styles/ProfileComponent.css
@@ -37,6 +37,7 @@
     position: relative;
     bottom: 4rem;
     left: 1rem;
+    z-index: 0;
 }
 
 
@@ -105,4 +106,41 @@
 
 .portfolio-url {
     color: var(--blue-500);
+}
+
+.profile-navigation-div {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-bottom: 1px solid var(--line-color);
+}
+
+.profile-navigation-menu {
+    padding: 0.75rem 5rem;
+    color: var(--tick-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-navigation-menu:hover {
+    background-color: var(--aside-bg-color);
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .profile-navigation-menu {
+        padding: 0.75rem 2.5rem;
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+    
+    .profile-navigation-menu {
+        padding: 0.75rem 1.5rem;
+    }
+
 }
