--- a/src/Components/Styles/EditProfileModal.css
+++ b/src/Components/Styles/EditProfileModal.css
@@ -21,10 +21,11 @@
 
 .modal {
     min-width: 38rem;
-    min-height: 32.5rem;
+    height: 35rem;
     background-color: var(--primary-bg-color);
     border-radius: 0.25rem;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+    overflow-y: auto;
 }
 
 .modal-header {
@@ -34,65 +35,47 @@
     padding-top: 0.75rem;
 }
 
-.playlist-container {
-    padding: 0.75rem;
-    font-size: 14px;
-    margin: 0.25rem 0.5rem;
-    height: 12rem;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 0.5rem;
-    overflow-y: scroll;
+.edit-profile-modal-header {
+    border-bottom: 1px solid var(--line-color);
+    margin-bottom: 1.5rem;
 }
 
-.playlist-item-div {
+.edit-profile-div-parent {
+    padding-left: 1rem;
+}
+
+.editpost-textarea {
+    width: 35rem;
+    border: 2px solid transparent;
+    background-color: var(--aside-bg-color);
+}
+
+.editpost-textarea:focus {
+    border: 2px solid var(--submit-btn-color);
+}
+
+.edit-profile-div {
     display: flex;
-    align-items: center;
-    background-color: var(--primary-bg-color);
-    border-radius: 0.25rem;
-    padding: 0.5rem;
-    gap: 1rem;
-   
+    flex-direction: column;
+    gap: 0.25rem;
 }
 
-.playlist-item-div:hover {
-    cursor: pointer;
+.edit-profile-div label {
+    margin-left: 0.2rem;
 }
 
-.playlist-check {
-    color: var(--submit-btn-color);
-}
 
-.playlist-uncheck {
-    color: var(--white);
-}
-
-.playlist-check:hover {
-    cursor: pointer;
-}
-
-.playlist-input {
-    margin: 0.25rem 0.5rem;
-    padding: 0.25rem;
-    margin-bottom: 0rem;
-}
-
-.playlist-input input {
-    width: 100%;
-    padding: 0.5rem 0.5rem;
-    padding-bottom: 0.25rem;
-    border-radius: 0.25rem;
-    caret-color: var(--submit-btn-color);
-    background-color: rgba(0, 0, 0, 0.4);
-    color: var(--white);
-    border-color: transparent;
+.edit-profile-div input {
+    width: 35rem;
+    padding: 0.75rem 0.5rem;
     border-radius: 8px;
+    border: 2px solid transparent;
+    background-color: var(--aside-bg-color);
+    color: var(--white);
+    caret-color: var(--submit-btn-color);
 }
 
-.modal-error-message {
-    margin-left: 1rem;
-}
-
-.playlist-input input:focus {
+.edit-profile-div input:focus {
     outline: none;
     border: 2px solid var(--submit-btn-color);
 }
@@ -100,8 +83,9 @@
 .modal-actions {
     /* border: 1px solid blue; */
     width: 100%;
-    padding: 0.2rem 0.5rem;
+    padding: 2rem;
     border-radius: 0.25rem;
+    padding-top: 1rem;
 }
 
 .actions-container {
@@ -111,27 +95,15 @@
     gap: 1.25rem;
 }
 
+.edit-profile-submit-btn {
+    background: transparent;
+    border: 1px solid transparent;
+}
+
 .close-modal-txt {
     color: var(--red-500);
 }
 
 .close-modal-txt:hover {
     color: var(--red-600);
-}
-
-.playlist-container::-webkit-scrollbar {
-    width: 0.5vw;
-}
-
-.playlist-container::-webkit-scrollbar-thumb {
-    background-color: var(--tick-color);
-    border-radius: 15rem;
-}
-
-.playlist-container::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-hover-color);
-}
-
-.playlist-container::-webkit-scrollbar-track {
-    background-color: var(--primary-bg-color);
 }
