--- a/src/Components/Styles/PostCard.css
+++ b/src/Components/Styles/PostCard.css
@@ -1,7 +1,7 @@
 .postcard-div {
     padding: 1rem;
     border-bottom: 1px solid var(--line-color);
-    margin-bottom: 5rem;
+    /* margin-bottom: 5rem; */
     max-width: 100%;
     overflow-x: hidden;
 }
