--- a/src/Pages/Styles/Styles.css
+++ b/src/Pages/Styles/Styles.css
@@ -46,6 +46,29 @@
     height: auto;
 }
 
+
+.profile-navigation-div {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-bottom: 1px solid var(--line-color);
+}
+
+.profile-navigation-menu {
+    padding: 0.75rem 5rem;
+    color: var(--tick-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-navigation-menu:hover {
+    background-color: var(--aside-bg-color);
+    cursor: pointer;
+}
+
+
 @media only screen and (max-width: 1100px) {
 
     .main-content {
@@ -87,6 +110,18 @@
 
     .auth-page-brand-text {
         display: none;
+    }
+
+    .profile-navigation-menu {
+        padding: 0.75rem 2.5rem;
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+    
+    .profile-navigation-menu {
+        padding: 0.75rem 1.5rem;
     }
 
 }
