--- a/src/Components/Styles/SuggestionBar.css
+++ b/src/Components/Styles/SuggestionBar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 20rem;
-    height: 100%;
+    height: 90%;
     position: fixed;
     z-index: 1;
     top: 4.65rem;
@@ -14,8 +14,8 @@
 
 .suggestion-heading {
     padding: 1rem 0rem 1rem 1rem;
-    margin-bottom: 1rem;
-    /* border-bottom: 1px solid var(--line-color); */
+    /* margin-bottom: 1rem; */
+    border-bottom: 1px solid var(--line-color);
 }
 
 .suggestion-div {
@@ -59,6 +59,10 @@
     padding: 0.25rem 1rem;
     border-radius: 2.5rem;
     font-weight: 450;
+}
+
+.isActive {
+    background-color: var(--aside-bg-color);
 }
 
 .suggestion-div:hover {
