feat: added profile image update functionality

--- a/src/Components/Styles/EditProfileModal.css
+++ b/src/Components/Styles/EditProfileModal.css
@@ -88,6 +88,26 @@
     padding-top: 1rem;
 }
 
+.edit-profile-img-div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+.edit-profile-logo-img {
+    max-width: 5rem;
+    margin: 1rem 0rem;
+}
+
+.edit-profile-logo-img img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+    border-radius: 50%;
+}
+
+
 .actions-container {
     display: flex;
     justify-content: flex-end;
