--- a/src/Pages/Styles/Styles.css
+++ b/src/Pages/Styles/Styles.css
@@ -9,6 +9,35 @@
     margin-bottom: 2rem;
 }
 
+.bookmark-heading-div {
+    border-bottom: 1px solid var(--line-color);
+    margin: 0rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+.bookmark-heading {
+    margin: 0rem;
+}
+
+.bookmark-sub-heading {
+    margin: 1rem 0rem;
+    color: var(--username-color);
+    margin-top: 0rem;
+    font-size: 1rem;
+}
+
+.empty-bookmark-list-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.empty-bookmark-list-div p {
+    color: var(--username-color);
+}
+
 .login-page-content-div {
     width: 100vw;
     height: 100vh;
@@ -153,7 +182,7 @@
 }
 
 @media only screen and (max-width: 500px) {
-    
+
     .profile-navigation-menu {
         padding: 0.75rem 1.5rem;
     }
