feat: comment functionality

--- a/src/Components/Styles/PostCard.css
+++ b/src/Components/Styles/PostCard.css
@@ -10,6 +10,11 @@
     display: flex;
 }
 
+.comment-header {
+    display: flex;
+    align-items: center;
+}
+
 .postcard-header-logo-img {
     max-width: 3.5rem;
 }
