--- a/src/Components/Styles/EditPostModal.css
+++ b/src/Components/Styles/EditPostModal.css
@@ -24,3 +24,22 @@
 .edit-post-submit-btn {
     margin-top: 0.5rem;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .edit-post-modal {
+        min-width: 35rem;
+    }
+ }
+
+ @media only screen and (max-width: 600px) {
+    .edit-post-modal {
+        min-width: 25rem;
+    }
+ }
+
+ @media only screen and (max-width: 450px) {
+    .edit-post-modal {
+        min-width: 20rem;
+    }
+ }
