--- a/src/Pages/Styles/Styles.css
+++ b/src/Pages/Styles/Styles.css
@@ -170,6 +170,8 @@
 
 }
 
+.margin-bottom-class {}
+
 @media only screen and (max-width: 768px) {
 
     .main-content {
@@ -199,6 +201,11 @@
 
     .profile-navigation-menu {
         padding: 0.75rem 2.5rem;
+    }
+
+
+    .margin-bottom-class {
+        margin-bottom: 5rem;
     }
 
 }
